<resources>
    <string name="app_name">AppIfoodTcc</string>
    <string name="email_login">Seu email</string>
    <string name="senha_login">Senha</string>
    <string name="nome_cadastro">Nome </string>
    <string name="email_cadastro">Email</string>
    <string name="senha_cadastro">Senha</string>
    <string name="fone_cadastro">Fone</string>
    <string name="botao_cadastrar">Cadastrar</string>


    <string name="erro_nome">"erro no campo nome"</string>
    <string name="erro_email">"erro no campo email"</string>
    <string name="erro_senha">"erro no campo senha"</string>
    <string name="erro_fone">"erro no campo fone"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>